# sport

./: Cargo.toml  README.md  app_icon_path.rc  build.rs  config.toml  exercise_data.toml
src/: BasicButton.slint  RepInput.slint  Settings.slint  SettingsButton.slint  Theme.slint  Visualisation.slint  VisualisationButton.slint  funcs.rs  main.rs  main.slint  ui.slint
src/resources/: chronological_data.txt  config.toml  exercise_data.toml
