[package]
name = "sport"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
rodio = { version = "0.17", default-features = false, features = ["mp3"] }
slint = "1.10.0"
toml = "0.8.20"
toml_edit = "0.22.24"

[lints.rust]
dead_code = "allow"
unused_must_use = "allow"
unused_mut = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"

[build-dependencies]
slint-build = "1.10.0"
