[package]
name = "sport"
version = "1.4.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
fs = "0.0.5"
io = "0.0.2"
once_cell = "1.21.3"
rand = "0.9.0"
rodio = { version = "0.17", default-features = false, features = ["mp3"] }
slint = { version = "1.10.0", default-features = true }
toml = "0.8.20"
toml_edit = "0.22.24"

[lints.rust]
dead_code = "allow"
unused_must_use = "allow"
unused_mut = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_assignments = "allow"

[build-dependencies]
slint-build = "1.10.0"
winres = "0.1.12"
